# laigpt

./: .gitignore  main.py  mnist_bench.py  requirements.txt
autograd/: functions.py  primitives.py  tensor.py
core/: datastream.py  gpt.py  module.py  optimize.py  tokenizer.py
core_math/: primitives.py  tensor.py
cppautograd/: CMakeLists.txt  build.sh
cppautograd/src/: PolyPtr.hpp  PolyRef.hpp  Primitives.cpp  Primitives.hpp  SmallVector.hpp  Tensor.cpp  Tensor.hpp  TensorNetwork.cpp  TensorNetwork.hpp  main.cpp
gpt_bench/: classify.py  train.py
mnist_bench/: classify.py  train.py
